Selección de iconos

--- a/ComprESI.csproj
+++ b/ComprESI.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\compresion.png" />
+    <None Remove="Assets\formato.png" />
+    <None Remove="Assets\home.png" />
     <None Remove="Assets\img_contact.png" />
     <None Remove="Assets\img_home.png" />
     <None Remove="Assets\tgBtn_default.png" />
@@ -16,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\compresion.png" />
+    <Resource Include="Assets\formato.png" />
+    <Resource Include="Assets\home.png" />
     <Resource Include="Assets\img_contact.png" />
     <Resource Include="Assets\img_home.png" />
     <Resource Include="Assets\tgBtn_default.png" />
