--- a/ComprESI.csproj
+++ b/ComprESI.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <StartupObject></StartupObject>
+    <Title>ComprESI</Title>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,9 +15,11 @@
     <None Remove="Assets\compresion.png" />
     <None Remove="Assets\formato.png" />
     <None Remove="Assets\home.png" />
+    <None Remove="Assets\img_background.png" />
     <None Remove="Assets\logo.png" />
     <None Remove="Assets\tgBtn_default.png" />
     <None Remove="Assets\tgBtn_MouseOver.png" />
+    <None Remove="Fonts\Roboto-Light.ttf" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,9 +31,11 @@
     <Resource Include="Assets\compresion.png" />
     <Resource Include="Assets\formato.png" />
     <Resource Include="Assets\home.png" />
+    <Resource Include="Assets\img_background.png" />
     <Resource Include="Assets\logo.png" />
     <Resource Include="Assets\tgBtn_default.png" />
     <Resource Include="Assets\tgBtn_MouseOver.png" />
+    <Resource Include="Fonts\Roboto-Light.ttf" />
   </ItemGroup>
 
 </Project>
